# FootsiesGym

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  build_package.py  pyproject.toml  setup.sh  vectorized-encoding-changes.md  vectorized-encoding-changes.md:com.dropbox.attrs  vectorized-environment-guide.md
benchmarking/: README.md  bench_throughput.py  plot_throughput.py
benchmarking/figures/data/: throughput.csv
binaries/: README.md  footsies_binaries
components/: module_repository.py
experimentation/callbacks/: add_policies.py  attach_connector.py  script_metrics.py
experimentation/components/: action_mask_action_connector.py  emagnet.py  module_repository.py
experimentation/experiments/: experiment.py  train.py  train_rlmodule.py
experimentation/experiments/cleanrl/: README.md  ppo_sweep.yaml  train_ppo.py
experimentation/experiments/rllib/: env_runner.py  experiment.py  experiment_rlmodule.py  matchmaking.py  train.py  train_rlmodule.py
experimentation/experiments/rllib/callbacks/: __init__.py  add_policies.py  script_metrics.py  winrates.py  winrates_v2.py
experimentation/experiments/rllib/components/: __init__.py  emagnet.py  module_repository.py
experimentation/models/modelv2/: back.py  footsies_bot.py  lstm_model.py  noop.py  random.py
experimentation/models/rl_modules/: back.py  lstm_module.py  noop.py
experimentation/utils/: __init__.py  stats_utils.py
experiments/: experiment.py  experiment_rlmodule.py
footsies/: footsies_env.py
footsiesgym/: __init__.py  binary_manager.py  wrappers.py
footsiesgym/binaries/footsies_binaries/footsies_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  sharedassets1.assets  sharedassets2.assets
footsiesgym/footsies/: __init__.py  encoder.py  footsies_env.py  typing.py
footsiesgym/footsies/game/: constants.py  footsies_bot.py  footsies_game.py
footsiesgym/footsies/scripts/: encoder_validation.py
footsiesgym/rllib/: env_runner.py
footsiesgym/testing/: test_encoder.py
scripts/: checkpoint_to_onnx.py  grpc_batch_test.py  grpc_smoke_test.py  local_inference.py  test_env.py  validate_encoding.py
scripts/validation/: csharp_inference_validation.py
testing/: test_action_spaces.py  test_binary_manager.py  test_env_logic.py  test_make.py  test_pettingzoo_api.py  test_vectorized_encoder.py
(+8 files in other folders)
