[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footsies-gym"
version = "0.7.2"
description = "A reinforcement learning environment for HiFight's Footsies game"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "Chase McDonald", email = "chasecmcdonald@gmail.com"}
]
maintainers = [
    {name = "Chase McDonald", email = "chasecmcdonald@gmail.com"}
]
keywords = ["reinforcement learning", "multi-agent", "fighting game", "footsies", "gymnasium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy>=1.24.0",
    "pettingzoo>=1.24.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "portpicker==1.6.0",
]

[project.optional-dependencies]
rllib = [
    "ray[rllib]>=2.46.0",
    "torch>=2.0.0",
]
training = [
    "wandb>=0.15.0",
    "torch>=2.0.0",
]
dev = [
    "pre-commit",
    "pytest",
    "black",
    "isort",
    "flake8",
]
all = [
    "footsies-gym[rllib,training,dev]"
]

[project.urls]
Homepage = "https://github.com/como-research/FootsiesGym"
Repository = "https://github.com/como-research/FootsiesGym"
Documentation = "https://github.com/como-research/FootsiesGym#readme"
"Bug Tracker" = "https://github.com/como-research/FootsiesGym/issues"

[tool.setuptools]
packages = ["footsiesgym", "footsiesgym.footsies", "footsiesgym.footsies.game", "footsiesgym.footsies.game.proto"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.proto", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: tests that require a running game server (launch binaries)",
]
